# edubot_demos

./: .gitattributes  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ros2_color_follower/: README.md  package.xml  setup.cfg  setup.py
ros2_color_follower/launch/: color_follower.launch.py
ros2_color_follower/ros2_color_follower/: color_follower_node.py  control.py
ros2_color_follower/test/: test_color_control.py
ros2_person_follower/: package.xml  setup.cfg  setup.py
ros2_person_follower/launch/: person_follower.launch.py
ros2_person_follower/ros2_person_follower/: control.py  person_follower_node.py
ros2_person_follower/test/: test_person_control.py
ros2_yolo_stream/: README.md  package.xml  setup.cfg  setup.py
ros2_yolo_stream/launch/: yolo_stream.launch.py
ros2_yolo_stream/ros2_yolo_stream/: yolo_stream_node.py
ros2_yolo_stream/scripts/: download_mobilenet_ssd.sh  download_yolov5n_onnx.sh  onnx_fp16_to_fp32.py
