<?xml version="1.0"?>
<package format="3">
  <name>ros2_color_follower</name>
  <version>0.0.1</version>
  <description>ROS 2 color blob following demo using HSV filtering – lightweight, no DNN.</description>

  <maintainer email="info@vectoral.ch">Vectoral</maintainer>
  <author>Stefan Siegler</author>
  <license file="LICENSE">PolyForm-Perimeter-1.0.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
