<?xml version="1.0"?>
<package format="3">
  <name>ros2_yolo_stream</name>
  <version>0.0.1</version>
  <description>Lightweight ROS 2 camera stream object detection demo using OpenCV DNN and YOLO ONNX.</description>

  <maintainer email="info@vectoral.ch">Vectoral</maintainer>
  <author>Stefan Siegler</author>
  <license file="LICENSE">PolyForm-Perimeter-1.0.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
